# repro-rules_js_eager_package_json_bzl

./: .bazeliskrc  .bazelrc  BUILD.bazel  MODULE.bazel  README.md  package.json
