load("@npm//:defs.bzl", "npm_link_all_packages")
load("@npm//:typescript/package_json.bzl", typescript_bin = "bin")

npm_link_all_packages(name = "node_modules")

typescript_bin.tsc(
  name = "tsc",
  srcs = [
    "one.ts",
    "tsconfig.json",
  ],
  args = ["-p", "tsconfig.json"],
  outs = ["one.js", "one.d.ts"],
)
